--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
       transform: translateY(-2px);
     }
 
+    /* 계산기 a태그 버튼만 display flex, width 100% 추가 */
+    a.category-button {
+      display: flex;
+      width: 100%;
+    }
+
     .icon {
       width: 24px;
       height: 24px;
