--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       <span class="icon">💧</span> HUB 물작업 (상온 SIOC HUB 소통방)
     </button>
 
-    <!-- 계산기 (새 창에서 열림) -->
-    <a class="category-button" href="SSG.HTML" target="_blank" rel="noopener noreferrer">
+    <!-- 계산기 (새 창 열기 제거) -->
+    <a class="category-button" href="SSG.HTML">
       <span class="icon">🧮</span> HUB 계산기
     </a>
   </div>
