--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HUB 채널 카테고리</title>
   <style>
     body {
@@ -44,19 +44,6 @@
       text-decoration: none;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
       transition: background-color 0.3s ease, transform 0.2s ease;
-      box-sizing: border-box;
-    }
-
-    a.category-button {
-      /* a 태그 기본 inline 스타일을 block/플렉스로 변경 */
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      width: 100%;
-      text-decoration: none;
-      border: none;
-      box-sizing: border-box;
-      cursor: pointer;
     }
 
     .category-button:hover {
@@ -94,12 +81,7 @@
       <span class="icon">🛤️</span> HUB 오분기 (WHEELSORTER 공유)
     </button>
 
-    <!-- 물작업 -->
-    <button class="category-button" onclick="goToPage('hub_sioc.html')">
-      <span class="icon">💧</span> HUB 물작업 (상온 SIOC HUB 소통방)
-    </button>
-
-    <!-- 계산기 (같은 창에서 열림, 버튼 너비 동일) -->
+    <!-- 계산기 (새 창에서 열림) -->
     <a class="category-button" href="SSG.HTML" rel="noopener noreferrer">
       <span class="icon">🧮</span> HUB 계산기
     </a>
@@ -112,3 +94,4 @@
   </script>
 </body>
 </html>
+
