--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HUB 채널 카테고리</title>
+  <title>HUB 채널 선택</title>
   <style>
     body {
       font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
@@ -25,17 +25,16 @@
       max-width: 480px;
       margin: 0 auto;
       padding: 20px;
-
       display: flex;
       flex-direction: column;
-      gap: 16px; /* 버튼 사이 간격 */
+      gap: 16px;
     }
 
     .category-button {
       display: flex;
       align-items: center;
       gap: 12px;
-      width: 100%; /* 버튼 너비 100% 고정 */
+      width: 100%;
       padding: 16px 20px;
       background-color: #5f0080;
       color: white;
