--- a/round3.html
+++ b/round3.html
@@ -19,6 +19,7 @@
       border-bottom: 1px solid #eee;
       padding-bottom: 10px;
       color: #5f0080;
+      text-align: center;
     }
     button {
       font-size: 22px;
@@ -49,6 +50,8 @@
 
     <button onclick="location.href='round3_work_water.html'">물작업</button>
     <button onclick="location.href='direct_round3.html'">직배</button>
+
+    <button onclick="location.href='round3_chung_gwang_jeju.html'">충청, 광주, 제주</button>
   </div>
 </body>
 </html>
