--- a/round3.html
+++ b/round3.html
@@ -51,7 +51,8 @@
     <button onclick="location.href='round3_work_water.html'">물작업</button>
     <button onclick="location.href='direct_round3.html'">직배</button>
 
-    <button onclick="location.href='round3_chung_gwang_jeju.html'">충청, 광주, 제주</button>
+    <button onclick="location.href='round3_cgj.html'">충청, 광주, 제주</button>
   </div>
 </body>
 </html>
+
