--- a/SSG.HTML
+++ b/SSG.HTML
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>상품별 계산기</title>
   <style>
     body {
@@ -77,7 +77,7 @@
   <!-- 네 개의 계산기 그룹 -->
   <div class="calc-group" id="calc1">
     <h3>삼다수 2L</h3>
-    <textarea id="display1" class="display" spellcheck="false"></textarea>
+    <textarea id="display1" class="display"></textarea>
     <div class="buttons">
       <button class="clear">C</button>
       <button class="operator">%</button>
@@ -92,7 +92,7 @@
 
   <div class="calc-group" id="calc2">
     <h3>삼다수 500ML</h3>
-    <textarea id="display2" class="display" spellcheck="false"></textarea>
+    <textarea id="display2" class="display"></textarea>
     <div class="buttons">
       <button class="clear">C</button><button class="operator">%</button><button class="clear">←</button><button class="operator">÷</button>
       <button>7</button><button>8</button><button>9</button><button class="operator">×</button>
@@ -104,7 +104,7 @@
 
   <div class="calc-group" id="calc3">
     <h3>지리산 2L</h3>
-    <textarea id="display3" class="display" spellcheck="false"></textarea>
+    <textarea id="display3" class="display"></textarea>
     <div class="buttons">
       <button class="clear">C</button><button class="operator">%</button><button class="clear">←</button><button class="operator">÷</button>
       <button>7</button><button>8</button><button>9</button><button class="operator">×</button>
@@ -116,7 +116,7 @@
 
   <div class="calc-group" id="calc4">
     <h3>지리산 500ML</h3>
-    <textarea id="display4" class="display" spellcheck="false"></textarea>
+    <textarea id="display4" class="display"></textarea>
     <div class="buttons">
       <button class="clear">C</button><button class="operator">%</button><button class="clear">←</button><button class="operator">÷</button>
       <button>7</button><button>8</button><button>9</button><button class="operator">×</button>
@@ -138,89 +138,105 @@
 
   <script>
     const lastPress = new WeakMap();
-
     function handlePress(e) {
       e.preventDefault();
       const btn = e.currentTarget;
       const now = Date.now();
       if (lastPress.has(btn) && now - lastPress.get(btn) < 100) return;
       lastPress.set(btn, now);
-
       const group = btn.closest('.calc-group');
       const id = group.id.replace('calc','');
       const disp = document.getElementById('display'+id);
       const txt = btn.textContent;
 
-      if (btn.classList.contains('clear') && txt==='C') {
-        disp.value='';
-        updateResult(id,'');
-        return;
+      if (btn.classList.contains('clear') && txt==='C') { 
+        disp.value=''; 
+        updateResult(id,''); 
+        return; 
       }
-      if (btn.classList.contains('clear') && txt==='←') {
-        disp.value=disp.value.slice(0,-1);
-        return;
+      if (btn.classList.contains('clear') && txt==='←') { 
+        disp.value=disp.value.slice(0,-1); 
+        updateResult(id, ''); 
+        return; 
       }
-      if (btn.classList.contains('equal')) {
-        doCalc(id);
-        return;
+      if (btn.classList.contains('equal')) { 
+        doCalc(id); 
+        return; 
       }
-      let v=txt;
-      if (v==='÷') v='/';
-      else if(v==='×') v='*';
-      else if(v==='−') v='-';
 
-      disp.selectionStart=disp.selectionEnd=disp.value.length;
-      disp.value+=v;
-      // 입력 후 *는 X로 표시
-      disp.value = disp.value.replace(/\*/g, 'X');
+      // 버튼 입력 시 * 대신 X 표시
+      let v = txt;
+      if (v === '÷') v = '/';
+      else if (v === '×') v = 'X'; // 화면에 X 표시
+      else if (v === '−') v = '-';
+
+      // 커서 끝으로 이동 후 추가
+      disp.selectionStart = disp.selectionEnd = disp.value.length;
+      disp.value += v;
     }
 
     function doCalc(id) {
-      const d=document.getElementById('display'+id);
-      let expr=d.value;
-      // 표시된 X를 계산용 *로 변경
-      expr = expr.replace(/X/g, '*');
-      // %처리
-      let js=expr.replace(/(\d+)%/g,'($1/100)');
+      const d = document.getElementById('display'+id);
+      let expr = d.value;
+
+      // X를 *로 바꿔서 계산
+      let js = expr.replace(/X/g, '*');
+
+      // % 처리 (숫자% → (숫자/100))
+      js = js.replace(/(\d+)%/g, '($1/100)');
+
       let result;
-      try {
-        result=eval(js);
-        result=Math.round(result*100)/100;
-      } catch {
-        result='오류';
+      try { 
+        result = eval(js); 
+        result = Math.round(result*100)/100; 
+      } catch { 
+        result = '오류'; 
       }
-      d.value = expr.replace(/\*/g, 'X') + '=' + result;
-      updateResult(id,result);
+
+      d.value = expr + '=' + result;
+      updateResult(id, result);
     }
 
-    function updateResult(id,val) {
-      document.getElementById('res'+id).textContent=val;
+    function updateResult(id, val) { 
+      document.getElementById('res'+id).textContent = val; 
     }
 
     function setup() {
       document.querySelectorAll('button').forEach(b=>{
-        b.addEventListener('click',handlePress);
-        b.addEventListener('touchstart',handlePress,{passive:false});
+        b.addEventListener('click', handlePress);
+        b.addEventListener('touchstart', handlePress, {passive:false});
       });
 
-      // 입력창에서 직접 입력 시 * 를 X로 바꾸고 결과 자동 계산
-      document.querySelectorAll('.display').forEach(disp=>{
-        disp.addEventListener('input', (e) => {
-          const original = e.target.value;
-          // *를 X로 교체
-          let replaced = original.replace(/\*/g,'X');
-          if (original !== replaced) e.target.value = replaced;
+      // textarea 직접 수정시 자동 계산 반영
+      document.querySelectorAll('.display').forEach(textarea => {
+        textarea.addEventListener('input', e => {
+          const id = textarea.id.replace('display','');
+          let expr = textarea.value;
 
-          // 계산하기
-          const id = disp.id.replace('display','');
-          doCalc(id);
+          // 화면에는 X 표시하므로 *는 없지만 혹시 입력된다면 X로 바꿔둠
+          expr = expr.replace(/\*/g, 'X');
+
+          // 계산용에는 X → *
+          let js = expr.replace(/X/g, '*');
+
+          // % 처리
+          js = js.replace(/(\d+)%/g, '($1/100)');
+
+          let result;
+          try {
+            result = eval(js);
+            result = Math.round(result*100)/100;
+          } catch {
+            result = '오류';
+          }
+          updateResult(id, result);
         });
       });
     }
-
-    window.onload=setup;
+    window.onload = setup;
   </script>
 
 </body>
 </html>
+
 
