--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </button>
 
     <!-- 마감방 -->
-    <button class="category-button" onclick="goToPage('hub_close.html')">
+    <button class="category-button" onclick="goToPage('hub_close_select.html')">
       <span class="icon">📦</span> HUB 마감방
     </button>
 
