--- a/jeongsang_report.html
+++ b/jeongsang_report.html
@@ -3,29 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>정상분기 보고서 입력 (동적 지시 슈트 입력란)</title>
+  <title>정상분기 보고</title>
   <style>
     body {
       font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
       background-color: #fff;
+      margin: 0;
       padding: 20px;
-      max-width: 480px;
-      margin: auto;
       color: #333;
     }
-    h1 {
+    header {
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 20px;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 10px;
       color: #5f0080;
       text-align: center;
-      margin-bottom: 20px;
+    }
+    .reference {
+      font-size: 14px;
+      color: #5f0080;
+      margin-bottom: 15px;
+      background-color: #faf5ff;
+      padding: 10px 15px;
+      border-radius: 8px;
+      user-select: text;
+      white-space: pre-wrap;
     }
     label {
-      display: block;
-      margin: 10px 0 5px;
       font-weight: 600;
-      color: #5f0080;
+      margin-top: 12px;
+      display: block;
+      color: #444;
     }
-    input[type="text"],
     input[type="number"],
+    input[type="text"],
     textarea {
       width: 100%;
       padding: 8px 12px;
@@ -35,7 +48,6 @@
       box-sizing: border-box;
       font-family: inherit;
       resize: vertical;
-      margin-bottom: 10px;
     }
     textarea {
       min-height: 120px;
@@ -50,13 +62,13 @@
       background-color: #faf5ff;
       font-size: 18px;
       color: #5f0080;
-      white-space: pre-wrap;
-      min-height: 120px;
       user-select: text;
+      white-space: pre-wrap;
+      min-height: 48px;
     }
     button.copy-btn {
       margin-top: 10px;
-      padding: 12px 24px;
+      padding: 10px 20px;
       font-size: 16px;
       background-color: #5f0080;
       color: white;
@@ -64,7 +76,6 @@
       border-radius: 8px;
       cursor: pointer;
       transition: background-color 0.3s ease;
-      width: 100%;
     }
     button.copy-btn:hover {
       background-color: #7a1fb5;
@@ -74,32 +85,50 @@
       margin-top: 8px;
       font-weight: 600;
       display: none;
-      text-align: center;
+    }
+    .input-group {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
-  <h1>정상분기 보고서 입력</h1>
+  <header>정상분기 보고</header>
 
-  <label for="countInput">정상분기 건수</label>
-  <input type="number" id="countInput" min="1" max="10" value="1" />
-
-  <div id="sheetInputsContainer">
-    <label>지시 슈트 1 (예: 2번 Y권역 1건)</label>
-    <input type="text" class="sheetInput" placeholder="예: 2번 Y권역 1건" />
+  <div class="reference">
+    슈트 번호 참조:  
+    1=Y, 2=Y, 3=U, 4=H, 5=M, 6=H, 7=PT, 8=CS, 9=GW, 10=DJ, 11=CA, 12=JE, 13=CJ롯데, 14=CJ롯데
   </div>
 
-  <label for="rejectedSuitInput">오분기 슈트</label>
-  <input type="text" id="rejectedSuitInput" placeholder="예: 리젝" />
+  <div class="input-group">
+    <label for="countInput">정상분기 건수 입력 (1~3)</label>
+    <input type="number" id="countInput" min="1" max="3" value="1" />
+  </div>
 
-  <label for="timeInput">발생 시각</label>
-  <input type="text" id="timeInput" placeholder="예: 23:10" />
+  <div id="directiveSuitesContainer">
+    <div class="input-group directive-suite-group">
+      <label>지시 슈트 1 (번호 권역 N건)</label>
+      <input type="text" class="directive-suite-input" placeholder="예: 2번 Y권역 3건" />
+    </div>
+  </div>
 
-  <label for="mentionTextarea">멘션 (수정 가능)</label>
-  <textarea id="mentionTextarea" spellcheck="false">@손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
+  <div class="input-group">
+    <label for="obungiInput">오분기 슈트</label>
+    <input type="text" id="obungiInput" placeholder="예: 리젝" />
+  </div>
+
+  <div class="input-group">
+    <label for="timeInput">발생시각</label>
+    <input type="text" id="timeInput" placeholder="예: 23:10" />
+  </div>
+
+  <div class="input-group">
+    <label for="mentionsTextarea">멘션 수정 가능 영역</label>
+    <textarea id="mentionsTextarea" spellcheck="false">@손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
 @홍지호 [FC자동화설비]</textarea>
+  </div>
 
-  <div class="result-box" id="resultBox">
+  <div class="notice">완성된 안내 문장:</div>
+  <div id="resultText" class="result-box">
     정상분기건 ○건 발생하였습니다.
     지시 슈트 : ○번 ○권역 N건
     오분기 슈트 : ○○
@@ -110,88 +139,112 @@
   </div>
 
   <button class="copy-btn" id="copyBtn">복사하기</button>
-  <div class="copy-success" id="copySuccess">복사되었습니다!</div>
+  <div id="copySuccess" class="copy-success">복사되었습니다!</div>
 
-<script>
-  const countInput = document.getElementById('countInput');
-  const sheetInputsContainer = document.getElementById('sheetInputsContainer');
-  const rejectedSuitInput = document.getElementById('rejectedSuitInput');
-  const timeInput = document.getElementById('timeInput');
-  const mentionTextarea = document.getElementById('mentionTextarea');
-  const resultBox = document.getElementById('resultBox');
-  const copyBtn = document.getElementById('copyBtn');
-  const copySuccess = document.getElementById('copySuccess');
+  <script>
+    const countInput = document.getElementById('countInput');
+    const directiveSuitesContainer = document.getElementById('directiveSuitesContainer');
+    const obungiInput = document.getElementById('obungiInput');
+    const timeInput = document.getElementById('timeInput');
+    const mentionsTextarea = document.getElementById('mentionsTextarea');
+    const resultText = document.getElementById('resultText');
+    const copyBtn = document.getElementById('copyBtn');
+    const copySuccess = document.getElementById('copySuccess');
 
-  // 동적으로 지시 슈트 입력란 생성 함수
-  function createSheetInputs(num) {
-    // 현재 있는 input들 제거
-    while (sheetInputsContainer.firstChild) {
-      sheetInputsContainer.removeChild(sheetInputsContainer.firstChild);
+    function updateDirectiveSuiteInputs(count) {
+      // 현재 입력창 개수
+      const currentCount = directiveSuitesContainer.querySelectorAll('.directive-suite-group').length;
+
+      if (count > currentCount) {
+        // 추가
+        for(let i = currentCount + 1; i <= count; i++) {
+          const div = document.createElement('div');
+          div.className = 'input-group directive-suite-group';
+
+          const label = document.createElement('label');
+          label.textContent = `지시 슈트 ${i} (번호 권역 N건)`;
+          div.appendChild(label);
+
+          const input = document.createElement('input');
+          input.type = 'text';
+          input.className = 'directive-suite-input';
+          input.placeholder = '예: 2번 Y권역 3건';
+          div.appendChild(input);
+
+          directiveSuitesContainer.appendChild(div);
+        }
+      } else if (count < currentCount) {
+        // 삭제
+        for(let i = currentCount; i > count; i--) {
+          const last = directiveSuitesContainer.querySelector('.directive-suite-group:last-child');
+          if(last) last.remove();
+        }
+      }
     }
-    for (let i = 1; i <= num; i++) {
-      const label = document.createElement('label');
-      label.textContent = `지시 슈트 ${i} (예: 2번 Y권역 1건)`;
-      const input = document.createElement('input');
-      input.type = 'text';
-      input.className = 'sheetInput';
-      input.placeholder = '예: 2번 Y권역 1건';
-      input.addEventListener('input', updateResult);
-      sheetInputsContainer.appendChild(label);
-      sheetInputsContainer.appendChild(input);
-    }
-  }
 
-  function updateResult() {
-    const countVal = countInput.value || '○';
+    function updateResult() {
+      const count = parseInt(countInput.value) || 1;
 
-    const sheetInputs = document.querySelectorAll('.sheetInput');
-    const filteredSheets = Array.from(sheetInputs)
-      .map(input => input.value.trim())
-      .filter(val => val.length > 0);
+      // 정상분기 건수
+      const countText = count > 0 ? count + '건' : '○건';
 
-    const sheetsStr = filteredSheets.length > 0 ? filteredSheets.join(' / ') : '○번 ○권역 N건';
-    const rejectedVal = rejectedSuitInput.value.trim() || '○○';
-    const timeVal = timeInput.value.trim() || '○○:○○';
+      // 지시 슈트들
+      const directiveInputs = directiveSuitesContainer.querySelectorAll('.directive-suite-input');
+      let directiveTexts = [];
+      directiveInputs.forEach(input => {
+        const val = input.value.trim();
+        if(val) directiveTexts.push(val);
+      });
+      const directiveLine = directiveTexts.length > 0 ? directiveTexts.join(' / ') : '○번 ○권역 N건';
 
-    resultBox.textContent = `정상분기건 ${countVal}건 발생하였습니다.
-지시 슈트 : ${sheetsStr}
-오분기 슈트 : ${rejectedVal}
+      const obungiVal = obungiInput.value.trim() || '○○';
+      const timeVal = timeInput.value.trim() || '○○:○○';
+
+      // 멘션 영역
+      const mentionsVal = mentionsTextarea.value.trim();
+
+      const result = 
+`정상분기건 ${countText} 발생하였습니다.
+지시 슈트 : ${directiveLine}
+오분기 슈트 : ${obungiVal}
 발생시각 : ${timeVal} 분경
 
-${mentionTextarea.value}`;
-    copySuccess.style.display = 'none';
-  }
+${mentionsVal}`;
 
-  // 최초 1개 input 생성
-  createSheetInputs(parseInt(countInput.value) || 1);
-
-  countInput.addEventListener('input', () => {
-    let val = parseInt(countInput.value);
-    if (isNaN(val) || val < 1) val = 1;
-    if (val > 10) val = 10;
-    countInput.value = val;
-    createSheetInputs(val);
-    updateResult();
-  });
-
-  rejectedSuitInput.addEventListener('input', updateResult);
-  timeInput.addEventListener('input', updateResult);
-  mentionTextarea.addEventListener('input', updateResult);
-
-  copyBtn.addEventListener('click', () => {
-    if (navigator.clipboard) {
-      navigator.clipboard.writeText(resultBox.textContent).then(() => {
-        copySuccess.style.display = 'block';
-        setTimeout(() => { copySuccess.style.display = 'none'; }, 2000);
-      }).catch(() => {
-        alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
-      });
-    } else {
-      alert('이 브라우저는 복사 기능을 지원하지 않습니다.');
+      resultText.textContent = result;
+      copySuccess.style.display = 'none';
     }
-  });
 
-  updateResult();
-</script>
+    countInput.addEventListener('input', () => {
+      let val = parseInt(countInput.value);
+      if(isNaN(val) || val < 1) val = 1;
+      else if(val > 3) val = 3;
+      countInput.value = val;
+      updateDirectiveSuiteInputs(val);
+      updateResult();
+    });
+
+    directiveSuitesContainer.addEventListener('input', updateResult);
+    obungiInput.addEventListener('input', updateResult);
+    timeInput.addEventListener('input', updateResult);
+    mentionsTextarea.addEventListener('input', updateResult);
+
+    copyBtn.addEventListener('click', () => {
+      if(navigator.clipboard){
+        navigator.clipboard.writeText(resultText.textContent).then(() => {
+          copySuccess.style.display = 'block';
+          setTimeout(() => copySuccess.style.display = 'none', 2000);
+        }).catch(() => {
+          alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
+        });
+      } else {
+        alert('이 브라우저는 복사 기능을 지원하지 않습니다.');
+      }
+    });
+
+    // 초기 설정
+    updateDirectiveSuiteInputs(parseInt(countInput.value));
+    updateResult();
+  </script>
 </body>
 </html>
