--- a/jeongsang_report.html
+++ b/jeongsang_report.html
@@ -7,244 +7,176 @@
   <style>
     body {
       font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
-      background-color: #fff;
-      margin: 0;
       padding: 20px;
+      background-color: #ffffff;
       color: #333;
     }
-    header {
-      font-size: 22px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      border-bottom: 1px solid #eee;
-      padding-bottom: 10px;
+
+    h2 {
       color: #5f0080;
-      text-align: center;
     }
-    .reference {
-      font-size: 14px;
-      color: #5f0080;
-      margin-bottom: 15px;
-      background-color: #faf5ff;
-      padding: 10px 15px;
-      border-radius: 8px;
-      user-select: text;
-      white-space: pre-wrap;
-    }
+
     label {
-      font-weight: 600;
+      font-weight: bold;
       margin-top: 12px;
       display: block;
-      color: #444;
     }
-    input[type="number"],
-    input[type="text"],
-    textarea {
+
+    input, textarea {
+      font-size: 16px;
+      padding: 8px;
+      margin: 6px 0;
       width: 100%;
-      padding: 8px 12px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      max-width: 400px;
       box-sizing: border-box;
-      font-family: inherit;
-      resize: vertical;
     }
-    textarea {
-      min-height: 120px;
-      background-color: #f3e8ff;
-      color: #5f0080;
-    }
+
     .result-box {
-      margin-top: 20px;
-      padding: 15px;
-      border: 1px solid #5f0080;
-      border-radius: 8px;
       background-color: #faf5ff;
-      font-size: 18px;
-      color: #5f0080;
-      user-select: text;
+      border: 1px solid #5f0080;
+      padding: 15px;
+      margin-top: 20px;
       white-space: pre-wrap;
-      min-height: 48px;
+      font-weight: bold;
+      color: #5f0080;
     }
-    button.copy-btn {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
+
+    button {
       background-color: #5f0080;
       color: white;
       border: none;
-      border-radius: 8px;
+      padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 10px;
+      border-radius: 6px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
-    button.copy-btn:hover {
+
+    button:hover {
       background-color: #7a1fb5;
     }
+
     .copy-success {
       color: green;
-      margin-top: 8px;
-      font-weight: 600;
+      margin-top: 10px;
       display: none;
+      font-weight: bold;
     }
-    .input-group {
-      margin-bottom: 10px;
+
+    .suit-ref {
+      margin-bottom: 12px;
+      font-size: 15px;
+      color: #666;
+    }
+
+    .input-set {
+      margin-bottom: 16px;
     }
   </style>
 </head>
 <body>
-  <header>정상분기 보고</header>
+  <h2>정상분기 보고</h2>
 
-  <div class="reference">
-    슈트 번호 참조:  
+  <div class="suit-ref">※ 슈트 번호 참조:  
     1=Y, 2=Y, 3=U, 4=H, 5=M, 6=H, 7=PT, 8=CS, 9=GW, 10=DJ, 11=CA, 12=JE, 13=CJ롯데, 14=CJ롯데
   </div>
 
-  <div class="input-group">
-    <label for="countInput">정상분기 건수 입력 (1~3)</label>
-    <input type="number" id="countInput" min="1" max="3" value="1" />
+  <label for="countInput">정상분기 건수</label>
+  <input type="number" id="countInput" min="1" max="10" placeholder="예: 3" />
+
+  <div id="suitInputs"></div>
+
+  <label for="rejInput">오분기 슈트</label>
+  <input type="text" id="rejInput" placeholder="예: 리젝" />
+
+  <label for="timeInput">발생시각</label>
+  <input type="text" id="timeInput" placeholder="예: 23:10" />
+
+  <label for="mentionInput">멘션 수정 가능 영역</label>
+  <textarea id="mentionInput" rows="5">@손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC] @홍지호 [FC자동화설비]</textarea>
+
+  <div class="result-box" id="resultText">
+정상분기건 ○건 발생하였습니다.
+지시 슈트 : ○번 ○권역 N건
+오분기 슈트 : ○○
+발생시각 : ○○:○○ 분경
+
+@손종선[평택HUB] ...
   </div>
 
-  <div id="directiveSuitesContainer">
-    <div class="input-group directive-suite-group">
-      <label>지시 슈트 1 (번호 권역 N건)</label>
-      <input type="text" class="directive-suite-input" placeholder="예: 2번 Y권역 3건" />
-    </div>
-  </div>
-
-  <div class="input-group">
-    <label for="obungiInput">오분기 슈트</label>
-    <input type="text" id="obungiInput" placeholder="예: 리젝" />
-  </div>
-
-  <div class="input-group">
-    <label for="timeInput">발생시각</label>
-    <input type="text" id="timeInput" placeholder="예: 23:10" />
-  </div>
-
-  <div class="input-group">
-    <label for="mentionsTextarea">멘션 수정 가능 영역</label>
-    <textarea id="mentionsTextarea" spellcheck="false">@손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
-@홍지호 [FC자동화설비]</textarea>
-  </div>
-
-  <div class="notice">완성된 안내 문장:</div>
-  <div id="resultText" class="result-box">
-    정상분기건 ○건 발생하였습니다.
-    지시 슈트 : ○번 ○권역 N건
-    오분기 슈트 : ○○
-    발생시각 : ○○:○○ 분경
-
-    @손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
-    @홍지호 [FC자동화설비]
-  </div>
-
-  <button class="copy-btn" id="copyBtn">복사하기</button>
-  <div id="copySuccess" class="copy-success">복사되었습니다!</div>
+  <button onclick="copyText()">복사하기</button>
+  <div class="copy-success" id="copySuccess">복사되었습니다!</div>
 
   <script>
     const countInput = document.getElementById('countInput');
-    const directiveSuitesContainer = document.getElementById('directiveSuitesContainer');
-    const obungiInput = document.getElementById('obungiInput');
+    const suitInputsDiv = document.getElementById('suitInputs');
+    const rejInput = document.getElementById('rejInput');
     const timeInput = document.getElementById('timeInput');
-    const mentionsTextarea = document.getElementById('mentionsTextarea');
+    const mentionInput = document.getElementById('mentionInput');
     const resultText = document.getElementById('resultText');
-    const copyBtn = document.getElementById('copyBtn');
     const copySuccess = document.getElementById('copySuccess');
 
-    function updateDirectiveSuiteInputs(count) {
-      // 현재 입력창 개수
-      const currentCount = directiveSuitesContainer.querySelectorAll('.directive-suite-group').length;
+    const MAX_FIELDS = 10;
 
-      if (count > currentCount) {
-        // 추가
-        for(let i = currentCount + 1; i <= count; i++) {
-          const div = document.createElement('div');
-          div.className = 'input-group directive-suite-group';
+    countInput.addEventListener('input', updateFields);
+    suitInputsDiv.addEventListener('input', updateResult);
+    rejInput.addEventListener('input', updateResult);
+    timeInput.addEventListener('input', updateResult);
+    mentionInput.addEventListener('input', updateResult);
 
-          const label = document.createElement('label');
-          label.textContent = `지시 슈트 ${i} (번호 권역 N건)`;
-          div.appendChild(label);
+    function updateFields() {
+      const count = parseInt(countInput.value) || 0;
+      suitInputsDiv.innerHTML = '';
 
-          const input = document.createElement('input');
-          input.type = 'text';
-          input.className = 'directive-suite-input';
-          input.placeholder = '예: 2번 Y권역 3건';
-          div.appendChild(input);
-
-          directiveSuitesContainer.appendChild(div);
-        }
-      } else if (count < currentCount) {
-        // 삭제
-        for(let i = currentCount; i > count; i--) {
-          const last = directiveSuitesContainer.querySelector('.directive-suite-group:last-child');
-          if(last) last.remove();
-        }
+      const limited = Math.min(count, MAX_FIELDS);
+      for (let i = 0; i < limited; i++) {
+        const group = document.createElement('div');
+        group.className = 'input-set';
+        group.innerHTML = `
+          <label>지시 슈트 ${i + 1}</label>
+          <input type="text" class="suitNum" placeholder="예: 2" />
+          <input type="text" class="suitRegion" placeholder="권역 예: Y" />
+          <input type="number" class="suitCount" min="1" placeholder="건수 예: 1" />
+        `;
+        suitInputsDiv.appendChild(group);
       }
+
+      updateResult();
     }
 
     function updateResult() {
-      const count = parseInt(countInput.value) || 1;
+      const count = countInput.value || '○';
+      const suitNums = suitInputsDiv.querySelectorAll('.suitNum');
+      const suitRegions = suitInputsDiv.querySelectorAll('.suitRegion');
+      const suitCounts = suitInputsDiv.querySelectorAll('.suitCount');
 
-      // 정상분기 건수
-      const countText = count > 0 ? count + '건' : '○건';
+      const details = [];
+      for (let i = 0; i < suitNums.length; i++) {
+        const num = suitNums[i].value || '○';
+        const region = suitRegions[i].value || '○';
+        const scount = suitCounts[i].value || 'N';
+        details.push(`${num}번 ${region}권역 ${scount}건`);
+      }
 
-      // 지시 슈트들
-      const directiveInputs = directiveSuitesContainer.querySelectorAll('.directive-suite-input');
-      let directiveTexts = [];
-      directiveInputs.forEach(input => {
-        const val = input.value.trim();
-        if(val) directiveTexts.push(val);
-      });
-      const directiveLine = directiveTexts.length > 0 ? directiveTexts.join(' / ') : '○번 ○권역 N건';
+      const suitsLine = details.length > 0 ? `지시 슈트 : ${details.join(' / ')}` : '지시 슈트 : ○번 ○권역 N건';
+      const rej = rejInput.value || '○○';
+      const time = timeInput.value || '○○:○○';
+      const mentions = mentionInput.value;
 
-      const obungiVal = obungiInput.value.trim() || '○○';
-      const timeVal = timeInput.value.trim() || '○○:○○';
-
-      // 멘션 영역
-      const mentionsVal = mentionsTextarea.value.trim();
-
-      const result = 
-`정상분기건 ${countText} 발생하였습니다.
-지시 슈트 : ${directiveLine}
-오분기 슈트 : ${obungiVal}
-발생시각 : ${timeVal} 분경
-
-${mentionsVal}`;
-
-      resultText.textContent = result;
-      copySuccess.style.display = 'none';
+      resultText.textContent = `정상분기건 ${count}건 발생하였습니다.\n${suitsLine}\n오분기 슈트 : ${rej}\n발생시각 : ${time} 분경\n\n${mentions}`;
     }
 
-    countInput.addEventListener('input', () => {
-      let val = parseInt(countInput.value);
-      if(isNaN(val) || val < 1) val = 1;
-      else if(val > 3) val = 3;
-      countInput.value = val;
-      updateDirectiveSuiteInputs(val);
-      updateResult();
-    });
+    function copyText() {
+      const text = resultText.textContent;
+      navigator.clipboard.writeText(text).then(() => {
+        copySuccess.style.display = 'block';
+        setTimeout(() => {
+          copySuccess.style.display = 'none';
+        }, 2000);
+      });
+    }
 
-    directiveSuitesContainer.addEventListener('input', updateResult);
-    obungiInput.addEventListener('input', updateResult);
-    timeInput.addEventListener('input', updateResult);
-    mentionsTextarea.addEventListener('input', updateResult);
-
-    copyBtn.addEventListener('click', () => {
-      if(navigator.clipboard){
-        navigator.clipboard.writeText(resultText.textContent).then(() => {
-          copySuccess.style.display = 'block';
-          setTimeout(() => copySuccess.style.display = 'none', 2000);
-        }).catch(() => {
-          alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
-        });
-      } else {
-        alert('이 브라우저는 복사 기능을 지원하지 않습니다.');
-      }
-    });
-
-    // 초기 설정
-    updateDirectiveSuiteInputs(parseInt(countInput.value));
-    updateResult();
+    updateFields();
   </script>
 </body>
 </html>
